# bootcamp_python-aula13

./: README.md  pyproject.toml
data/csv_files/: vendas_proj.csv
data/json_files/: vendas_proj_j.json
data/txt_files/: vendas_proj_t.txt
src/: main.py
src/lib/classes/: AbstractDataSource.py  CsvSources.py  JsonSources.py  TxtSources.py
