[project]
name = "bootcamp-python-aula13"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus-ESW",email = "matheussoaresramos@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "boto3 (>=1.40.74,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
